package com.xinqihd.sns.gameserver.proto;
//公会信息

import "GuildMember.proto";

option java_outer_classname = "XinqiGuildInfo"; 
message GuildInfo 
{
    required int32  guildID = 1;           //公会ID
    optional string guildName = 2;         //公会名
    optional string leaderID = 3;          //会长ID
    optional string leaderName = 4;        //会长名字
    optional int32 guildWealth = 5;        //公会财富值
    optional uint32 guildMemberCnt = 6;    //公会人数
    optional uint32 guildLevel = 7;        //公会等级
    optional uint32 guildCredit = 8;       //公会功勋
    optional string announcements  = 9;    //公会宣言
    repeated GuildMember guildmember = 10; //成员列表
    optional uint32 shoplevel = 11; 			 //商店等级
    optional uint32 ironlevel = 12; 			 //铁匠铺等级
    repeated string posName	 	= 13;				 //自定义职位名称
    repeated uint32 shoplimit = 14;				 //商店贡献度限制
    optional uint32 ironlimit = 15;				 //铁匠铺贡献度限制
}
